--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,150 +1,28 @@
 body {
-  box-sizing: border-box;
-  background-image: url(/assets/images/1678775422_bogatyr-club-p-zadnii-fon-gori-foni-krasivo-2.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  max-width: 1600px;
-  width: 100%;
-  height: 100vh;
-  font-size: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-family: "Segoe UI", Tahoma, Verdana, sans-serif;
+  display: block;
+  padding: 10px;
+  font-family: Arial, Helvetica, sans-serif;
+
+  font-size: 1em;
+  word-spacing: 5px;
+  background-color: rgb(192, 218, 243);
 }
 
-.button {
-  border: 0px;
-  border-radius: 50px;
-  text-shadow: rgb(79, 71, 223) 1px 1px 1px;
-  max-width: 67px;
-  width: 100%;
-  height: 15px;
-  background-color: #c0dbf0;
-  color: rgb(255, 255, 255);
-  font-weight: 600;
-  font-size: 8px;
-  margin: 0px 3.5px;
-  margin-bottom: 8px;
-  letter-spacing: 2px;
-}
-
-.speciesDiv,
-.existenceDiv,
-.colorsDiv {
-  max-width: 67px;
-  width: 100%;
-  height: 75px;
-  background-color: #c0dbf0;
-}
-
-.speciesDiv {
-  font-size: 8px;
-  position: absolute;
-  left: 4px;
-}
-
-.existenceDiv {
-  font-size: 8px;
-  position: absolute;
-  left: 80px;
-}
-
-.colorsDiv {
-  font-size: 8px;
-  position: absolute;
-  left: 157px;
-}
-
-main {
-  position: relative;
-  top: 30px;
-  left: 120px;
-}
-
-article {
-  border: 2px solid white;
-  max-width: 380px;
-  width: 100vh;
-  height: 360px;
-}
-
-#profilePhoto {
-  border: 2px #ffefdd solid;
-  border-radius: 2px;
-  position: absolute;
-  top: 88px;
-  left: 328px;
-}
-
-.heartIcon {
-  position: absolute;
-  top: 110px;
-  left: 676px;
-  color: rgb(251, 247, 3);
-  font-size: 17px;
-}
-
-.burgerButton {
-  background-color: hsl(214, 100%, 36%);
-  color: white;
-  border: 0px;
-  border-radius: 25px;
-}
-
-.infoButton {
-  border: 0px;
-  border-radius: 25px;
-  position: absolute;
-  width: 60px;
-  height: 16px;
-  font-size: 9px;
+button {
+  border: none;
+  border-radius: 24px;
+  background-color: rgba(255, 255, 255, 0.603);
+  color: rgb(0, 0, 0);
   text-align: center;
-  color: azure;
-  background-color: #7db3d7;
-  margin: 120px 0px 10px 30px;
+  margin-left: 70px;
+  margin-top: 10px;
+  max-width: 300px;
+  width: 100%;
+  letter-spacing: 3px;
 }
-
-p:first-child {
-  margin-top: 145px;
-}
-
 p {
-  width: 100px;
-  padding: 2px 5px;
-}
-
-p:nth-child(5) {
-  border: 1px white solid;
-  border-radius: 3px;
-  background-color: #7db3d7;
-  margin-top: 95px;
-  margin-left: 2px;
-  width: 365px;
-  word-spacing: 2px;
-  font-size: 8px;
-  text-align: center;
-}
-
-.backgroundImage {
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  filter: blur(5px);
-  width: 380px;
-  height: 385px;
-  position: absolute;
-  z-index: -1;
-}
-
-.secondaryImage {
-  background-repeat: no-repeat;
-  background-size: cover;
-  width: 250px;
-  height: 220px;
-  position: absolute;
-  top: 194px;
-  left: 444px;
-  border: 2px solid #ebdfd1;
-  border-radius: 5px;
+  margin: 50px 0px 0px 35px;
+  color: rgb(255, 5, 105);
+  max-width: 400px;
+  width: 100%;
 }
