--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,28 +1,300 @@
-body {
-  display: block;
-  padding: 10px;
-  font-family: Arial, Helvetica, sans-serif;
+/* body {
+  box-sizing: border-box;
+  padding: 0 10px;
+  font-family: monospace;
+  background-color: azure;
+  background-image: url(https://media.istockphoto.com/id/1382178425/ru/%D1%84%D0%BE%D1%82%D0%BE/%D1%82%D0%B5%D0%BD%D1%8C-%D0%BD%D0%B0-%D0%B1%D0%B5%D0%BB%D0%BE%D0%B9-%D1%81%D1%82%D0%B5%D0%BD%D0%B5.jpg?s=612x612&w=0&k=20&c=jpC-2oju0HCP5Bc10PwlUKuorJTVq_jvSOP5oBq3CEA=);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  object-fit: cover;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
 
-  font-size: 1em;
-  word-spacing: 5px;
-  background-color: rgb(192, 218, 243);
+#root {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+article {
+  box-shadow: 0 4px 8px 0 rgba(187, 187, 187, 0.662);
+  background-color: white;
+  margin: 10px;
+  max-width: 200px;
+  width: 100%;
+  height: 250px;
+  border-radius: 16px;
+  flex: 1 1 calc(33.33% - 20px);
+  box-sizing: border-box;
+}
+
+.userFoto {
+  max-width: 100px;
+  width: 100%;
+  height: 100px;
+  object-fit: cover;
+  border: 2.5px solid rgb(19, 197, 27);
+  border-radius: 50px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin-left: 47px;
+  margin-top: 10px;
+}
+
+h2 {
+  padding: 10px 15px;
+  margin-left: 50px;
+  font-weight: 700;
+}
+
+p {
+  color: blue;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 8px;
+  letter-spacing: 1.5px;
+  padding: 10px 0;
+  margin: 0 15px;
+  box-shadow: 0 1px rgba(174, 174, 174, 0.518);
 }
 
 button {
   border: none;
-  border-radius: 24px;
-  background-color: rgba(255, 255, 255, 0.603);
-  color: rgb(0, 0, 0);
-  text-align: center;
-  margin-left: 70px;
-  margin-top: 10px;
-  max-width: 300px;
-  width: 100%;
-  letter-spacing: 3px;
+  border-radius: 3px;
+  background-color: rgb(101, 102, 173);
+  color: white;
+  width: 50px;
+  height: 20px;
+  margin: 25px 16px;
 }
-p {
-  margin: 50px 0px 0px 35px;
-  color: rgb(255, 5, 105);
-  max-width: 400px;
+
+button:hover {
+  background-color: rgb(225, 222, 172);
+  color: black;
+}
+
+#controls {
   width: 100%;
+  text-align: center;
+  margin-bottom: 15px;
+}
+
+#resultsPerPage {
+  margin: 10px;
+  width: 50px;
+  text-align: center;
+  background-color: rgb(255, 255, 255);
+  color: rgb(181, 2, 2);
+  border: 1px rgb(74, 14, 255) solid;
+} */
+/* body {
+  box-sizing: border-box;
+  padding: 0 10px;
+  font-family: monospace;
+  background-color: azure;
+  background-image: url(https://media.istockphoto.com/id/1382178425/ru/%D1%84%D0%BE%D1%82%D0%BE/%D1%82%D0%B5%D0%BD%D1%8C-%D0%BD%D0%B0-%D0%B1%D0%B5%D0%BB%D0%BE%D0%B9-%D1%81%D1%82%D0%B5%D0%BD%D0%B5.jpg?s=612x612&w=0&k=20&c=jpC-2oju0HCP5Bc10PwlUKuorJTVq_jvSOP5oBq3CEA=);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  object-fit: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+#root {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+article {
+  box-shadow: 0 4px 8px 0 rgba(187, 187, 187, 0.662);
+  background-color: white;
+  margin: 10px;
+  max-width: 200px;
+  width: 100%;
+  height: 250px;
+  border-radius: 16px;
+  flex: 1 1 calc(33.33% - 20px);
+  box-sizing: border-box;
+}
+
+.userFoto {
+  max-width: 100px;
+  width: 100%;
+  height: 100px;
+  object-fit: cover;
+  border: 2.5px solid rgb(19, 197, 27);
+  border-radius: 50px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin-left: 47px;
+  margin-top: 10px;
+}
+
+h2 {
+  padding: 10px 15px;
+  margin-left: 50px;
+  font-weight: 700;
+}
+
+p {
+  color: blue;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 8px;
+  letter-spacing: 1.5px;
+  padding: 10px 0;
+  margin: 0 15px;
+  box-shadow: 0 1px rgba(174, 174, 174, 0.518);
+}
+
+button {
+  border: none;
+  border-radius: 3px;
+  background-color: rgb(101, 102, 173);
+  color: white;
+  width: 50px;
+  height: 20px;
+  margin: 10px;
+}
+
+button:hover {
+  background-color: rgb(225, 222, 172);
+  color: black;
+}
+
+#controls {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 15px;
+  flex-wrap: wrap;
+}
+
+#controls h1 {
+  margin-right: 10px;
+  font-size: 1.2em;
+  font-weight: normal;
+}
+
+#resultsPerPage {
+  margin: 10px;
+  width: 50px;
+  text-align: center;
+  background-color: rgb(255, 255, 255);
+  color: rgb(181, 2, 2);
+  border: 1px rgb(74, 14, 255) solid;
+} */
+body {
+  box-sizing: border-box;
+  padding: 0 10px;
+  font-family: monospace;
+  background-color: azure;
+  background-image: url(https://media.istockphoto.com/id/1382178425/ru/%D1%84%D0%BE%D1%82%D0%BE/%D1%82%D0%B5%D0%BD%D1%8C-%D0%BD%D0%B0-%D0%B1%D0%B5%D0%BB%D0%BE%D0%B9-%D1%81%D1%82%D0%B5%D0%BD%D0%B5.jpg?s=612x612&w=0&k=20&c=jpC-2oju0HCP5Bc10PwlUKuorJTVq_jvSOP5oBq3CEA=);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  object-fit: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+#root {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+article {
+  box-shadow: 0 4px 8px 0 rgba(187, 187, 187, 0.662);
+  background-color: white;
+  margin: 10px;
+  max-width: 200px;
+  width: 100%;
+  height: 250px;
+  border-radius: 16px;
+  flex: 1 1 calc(33.33% - 20px);
+  box-sizing: border-box;
+}
+
+.userFoto {
+  max-width: 100px;
+  width: 100%;
+  height: 100px;
+  object-fit: cover;
+  border: 2.5px solid rgb(19, 197, 27);
+  border-radius: 50px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin-left: 47px;
+  margin-top: 10px;
+}
+
+h2 {
+  padding: 10px 15px;
+  margin-left: 50px;
+  font-weight: 700;
+}
+
+p {
+  color: blue;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 8px;
+  letter-spacing: 1.5px;
+  padding: 10px 0;
+  margin: 0 15px;
+  box-shadow: 0 1px rgba(174, 174, 174, 0.518);
+}
+
+button {
+  border: none;
+  border-radius: 3px;
+  background-color: rgb(101, 102, 173);
+  color: white;
+  width: 50px;
+  height: 20px;
+  margin: 25px 16px;
+}
+
+button:hover {
+  background-color: rgb(225, 222, 172);
+  color: black;
+}
+
+#controls {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 15px;
+  flex-wrap: wrap;
+}
+
+#controls h1 {
+  margin-right: 10px;
+  font-size: 1.2em;
+  font-weight: normal;
+}
+
+#resultsPerPage {
+  margin: 10px;
+  width: 50px;
+  text-align: center;
+  background-color: rgb(255, 255, 255);
+  color: rgb(181, 2, 2);
+  border: 1px rgb(74, 14, 255) solid;
+}
+
+#buttons {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 15px;
 }
